Fix max-width and title padding on mobile layout

--- a/css/style.css
+++ b/css/style.css
@@ -333,9 +333,10 @@ footer {
 }
 
 /* MOBILE LAYOUT */
-@media only screen and (max-width: 715px) {
+@media only screen and (max-width: 665px) {
   /* Main Content */
   .main-title {
+    padding: 0 20px;
     font-size: 2em;
   }
 
